[gd_scene load_steps=5 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]
[ext_resource path="res://button.png" type="Texture" id=2]
[ext_resource path="res://button_selection.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 13 )

[node name="Button" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="button" type="Sprite" parent="." index="0"]

position = Vector2( 30, 7 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="button_selection" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 30, 7 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "EXIT"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse" ]

[node name="Area2D" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 30, 7.5 )
scale = Vector2( 2.30769, 0.576923 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]


